Add Consumptions APIs
