# internal/swagger/api_v1.0.json
@@ -71,6 +71,84 @@
                     "200": {
                         "description": "sucessful operation",
                         "schema":{
+                            "$ref": "#/definitions/SwitchConsumption"
+                        }
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                          "$ref": "#/definitions/Error"
+                        }
+                      }
+                }
+            }
+        },
+        "/status/consumption/leds": {
+            "get": {
+                "tags": [
+                    "status"
+                ],
+                "summary": "Lighting consumptions Status",
+                "description": "Lighting consumptions Status",
+                "produces":[
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "sucessful operation",
+                        "schema":{
+                            "$ref": "#/definitions/Consumption"
+                        }
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                          "$ref": "#/definitions/Error"
+                        }
+                      }
+                }
+            }
+        },
+        "/status/consumption/blinds": {
+            "get": {
+                "tags": [
+                    "status"
+                ],
+                "summary": "Blinds consumptions Status",
+                "description": "Blinds consumptions Status",
+                "produces":[
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "sucessful operation",
+                        "schema":{
+                            "$ref": "#/definitions/Consumption"
+                        }
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                          "$ref": "#/definitions/Error"
+                        }
+                      }
+                }
+            }
+        },
+        "/status/consumption/hvacs": {
+            "get": {
+                "tags": [
+                    "status"
+                ],
+                "summary": "HVACs consumptions Status",
+                "description": "HVACs consumptions Status",
+                "produces":[
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "sucessful operation",
+                        "schema":{
                             "$ref": "#/definitions/Consumption"
                         }
                     },
@@ -85,6 +163,36 @@
         }
     },
     "definitions": {
+        "SwitchConsumption" :{
+            "required": [
+                "totalPower",
+                "lightingPower",
+                "blindPower",
+                "hvacPower"
+            ],
+            "properties": {
+                "totalPower": {
+                    "type": "integer",
+                    "format": "int32",
+                    "description": "Global switch power consumption (Watts)"
+                },
+                "lightingPower": {
+                    "type": "integer",
+                    "format": "int32",
+                    "description": "Lighting power consumption (Watts)"
+                },
+                "blindPower": {
+                    "type": "integer",
+                    "format": "int32",
+                    "description": "Blind power consumption (Watts)"
+                },
+                "hvacPower": {
+                    "type": "integer",
+                    "format": "int32",
+                    "description": "HVAC power consumption (Watts)"
+                }
+            }
+        },
         "Consumption" :{
             "required": [
                 "power"
@@ -92,7 +200,8 @@
             "properties": {
                 "power": {
                     "type": "integer",
-                    "format": "int32"
+                    "format": "int32",
+                    "description": "Power consumption (Watts)"
                 }
             }
         },
